--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,9 @@
 body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
-    min-height: 100vh;
 }
 
 main {
-    min-height: calc(100vh - 7.5rem);
+    min-height: calc(100vh - 15.5rem);
 }
 
