✨ Add empty slider

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,5 +5,15 @@ body {
 
 main {
     min-height: calc(100vh - 15.5rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
+section.main-slider {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
