--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,24 +1,82 @@
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 0;
 }
 
 main {
-    min-height: calc(100vh - 15.5rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+  min-height: calc(100vh - 15.5rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+section {
+  width: 90%;
+}
+
+section > p {
+  font-size: 2rem;
 }
 
 section.main-slider {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-section.main-slider > p {
-    font-size: 1.3rem;
-    text-align: justify;
+section.main-slider p {
+  max-width: 25rem;
+  margin-top: auto;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.slider-container {
+  position: relative;
+  min-width: 300px;
+  min-height: 200px;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  color: white;
+}
+
+.prev-button {
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
 }
