--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,30 +22,43 @@ section {
   width: 90%;
 }
 
-section > p {
-  font-size: 2rem;
+section.main-pros {
+  padding-left: 10%; 
 }
 
-section.main-slider {
+section {
+  font-size: 1.9rem;
+}
+
+section.flexrow-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
-section.main-slider p {
-  max-width: 25rem;
+section.flexrow-container p {
+  max-width: 26rem;
   margin-top: auto;
   padding-bottom: 2%;
   padding-left: 5%;
   padding-right: 5%;
 }
 
-.slider-container {
+section.flexrow-container > img {
   position: relative;
+  border-radius: 1rem;
+  width: 50%;
   min-width: 300px;
   min-height: 200px;
-  aspect-ratio: 16/9;
+  overflow: hidden;
+}
+
+.slider-container {
+  position: relative;
+  width: 50%;
+  min-width: 300px;
+  min-height: 200px;
   overflow: hidden;
 }
 
@@ -58,6 +71,7 @@ section.main-slider p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 1rem;
 }
 
 .prev-button,
