--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,52 +1,96 @@
 body {
-    margin: 0;
-    height: 100vh;
-}
-
-#header {
-    background-color: #BD81C9;
-    height: 4.5rem;
-    display: flex;
-}
-
-#logo {
-    height: 3rem;
-    width: 3rem;
-}
-
-#nav {
-    width: calc(100% - 3rem);
-    padding-left: 5rem;
-    align-self: center;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 3rem;
-    gap: 2%;
-}
-
-.nav-link {
-    text-decoration: none;
-}
-
-.nav-elem {
-    height: 2.5rem;
-    width: 7rem;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 1.2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color:wheat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 0;
 }
 
 main {
-    height: 100%
+  min-height: calc(100vh - 15.5rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-footer {
-    height: 3rem;
-    background-color: #BD81C9;
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+section {
+  width: 90%;
+}
+
+section.main-pros {
+  padding-left: 10%; 
+}
+
+section {
+  font-size: 1.9rem;
+}
+
+section.flexrow-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+section.flexrow-container p {
+  max-width: 26rem;
+  margin-top: auto;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+section.flexrow-container > img {
+  position: relative;
+  border-radius: 1rem;
+  width: 50%;
+  min-width: 300px;
+  min-height: 200px;
+  overflow: hidden;
+}
+
+.slider-container {
+  position: relative;
+  width: 50%;
+  min-width: 300px;
+  min-height: 200px;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  color: white;
+}
+
+.prev-button {
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
 }
