--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,79 +1,40 @@
+.slider-container {
+  position: relative;
+  width: 50%;
+  min-width: 300px;
+  min-height: 200px;
+  overflow: hidden;
+}
+
 .slider {
-    width: 50%;
-    min-width: 15rem;
-    text-align: center;
-    overflow: hidden;
-}
-  
-.slides {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
-
+  display: flex;
+  transition: transform 0.5s ease-in-out;
 }
 
-.slides::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+.slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
 }
 
-.slides::-webkit-scrollbar-thumb {
-    background: black;
-    border-radius: 10px;
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  color: white;
 }
 
-.slides::-webkit-scrollbar-track {
-    background: transparent;
+.prev-button {
+  left: 10px;
 }
 
-.slides > div {
-    scroll-snap-align: start;
-    flex-shrink: 0;
-    width: 100%;
-    height: 300px;
-    margin-right: 50px;
-    border-radius: 10px;
-    background: #eee;
-    transform-origin: center center;
-    transform: scale(1);
-    transition: transform 0.5s;
-    position: relative;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
+.next-button {
+  right: 10px;
 }
-
-img {
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-  
-.slider > a {
-    display: inline-flex;
-    width: 1.5rem;
-    height: 1.5rem;
-    background: white;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin: 0 0 0.5rem 0;
-    position: relative;
-}
-
-.slider > a:active {
-    top: 1px;
-}
-
-.slider > a:focus {
-    background: #000;
-}
-
