--- a/public/css/feedback-form.css
+++ b/public/css/feedback-form.css
@@ -5,25 +5,31 @@ section.feedback-form {
 form {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   border: 2px solid black;
   width: 60%;
-  height: 25rem;
+  height: 27rem;
   padding: 2% 4%;
   text-align: center;
   font-size: 2rem;
+  transition: height 0.5s ease-in-out;
+}
+
+form.submitted {
+  border: none;
+  height: 2rem;
 }
 
 h1 {
   text-align: center;
-  margin-top: 0px;
+  margin: 0;
+  padding-bottom: 3%;
 }
 
-.form-container {
-  height: 100%;
+div.form-container {
+  min-height: 23rem;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
+  gap: 5%;
   align-items: center;
 }
 
@@ -48,10 +54,11 @@ label {
 }
 
 input.regular {
-  width: 100%;
+  width: 90%;
 }
 
 textarea.description {
+  resize: none;
   width: 100%;
   height: 100%;
 }
@@ -59,9 +66,6 @@ textarea.description {
 input.button {
   width: 10rem;
   height: 2rem;
-  background-color: inherit;
-  border: 3px solid #bd81c9;
-  border-radius: 20px;
   font-size: 1.2rem;
   font-family: inherit;
 }
@@ -70,4 +74,30 @@ input[type="text"],
 input[type="email"],
 textarea.description {
   font-size: 1.2rem;
+}
+
+@media (max-width: 800px) {
+  form {
+    width: 90%;
+    font-size: 1.3rem;
+    height: 30rem;
+  }
+
+  div.form-container {
+    height: 30rem;
+  }
+
+  h1 {
+    font-size: 1.7rem;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea.description {
+    font-size: 1rem;
+  }
+
+  div.input-container {
+    flex-direction: column;
+  }
 }
