--- a/public/css/feedback.css
+++ b/public/css/feedback.css
@@ -1,5 +1,5 @@
 section.feedback-head {
-    height: 5rem;
+    height: fit-content;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -16,11 +16,10 @@ section.feedback-head {
 }
 
 section.reviews-container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 30rem);
     justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
+    width: 85%;
     min-height: 30rem;
 }
 
@@ -29,16 +28,14 @@ section.reviews-container {
 }
 
 div.review-wrapper {
-    padding: 1%;
-    min-width: 20rem;
-    max-width: 48%;
+    padding: 1rem;
+    min-width: 17rem;
 }
 
 div.review {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 2%;
 }
 
 div.review > section {
@@ -51,6 +48,7 @@ div.review > h3 {
 
 div.review > section > p {
     text-align: justify;
+    font-size: 1.5rem;
     overflow-wrap: break-word;
 }
 
