--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,7 +74,7 @@ section.flexrow-container > img {
   position: relative;
   border-radius: 1rem;
   width: 50%;
-  min-width: 300px;
+  min-width: 250px;
   min-height: 200px;
   overflow: hidden;
 }
@@ -160,5 +160,17 @@ section#login {
   }
   section.flexrow-container > img, .slider-container {
     width: 80%;
+  }
+}
+
+@media (max-width: 900px) {
+  .grid-3rows-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-3rows-container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
