--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,19 +1,17 @@
 .slider-container {
   position: relative;
   width: 50%;
-  min-width: 300px;
+  min-width: 250px;
   min-height: 200px;
   overflow: hidden;
 }
 
 .slider {
   display: flex;
-  transition: transform 0.5s ease-in-out;
 }
 
 .slider img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 1rem;
 }
@@ -28,7 +26,12 @@
   background-color: transparent;
   border: none;
   font-size: 24px;
-  color: white;
+  color: #bd81c9;
+}
+
+.prev-button:hover,
+.next-button:hover {
+  background-color: transparent;
 }
 
 .prev-button {
