--- a/public/css/feedback-form.css
+++ b/public/css/feedback-form.css
@@ -6,6 +6,7 @@ form {
   display: flex;
   flex-direction: column;
   border: 2px solid black;
+  border-radius: 1rem;
   width: 60%;
   height: 27rem;
   padding: 2% 4%;
