--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@ body {
   --additional-color: #bd81c9;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
+  min-width: 280px;
 }
 
 main {
