--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,6 +1,7 @@
 .slider-container {
   position: relative;
   width: 50%;
+  aspect-ratio: 3 / 2;
   min-width: 250px;
   min-height: 200px;
   overflow: hidden;
