--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-  --additional-color: #bd81c9;
+  --additional-color: #86b6da;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   min-width: 280px;
@@ -36,7 +36,7 @@ button, .button {
 }
 
 button:hover, .button:hover {
-  background-color: #bd81c9;
+  background-color: var(--additional-color);
 }
 
 section.main-section {
@@ -119,6 +119,14 @@ section#login {
   width: 50%;
   height: 50%;
   font-size: 1.6rem;
+}
+
+#wrong-password {
+  margin: 0;
+  padding: 0.5rem;
+  border-radius: 15px;
+  background-color: #e75480;
+  font-weight: normal;
 }
 
 @media (max-width: 1110px) {
