--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -27,7 +27,7 @@
   background-color: transparent;
   border: none;
   font-size: 24px;
-  color: #bd81c9;
+  color: #000000;
 }
 
 .prev-button:hover,
