--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,6 +3,13 @@ section > h4, section > h5 {
   margin-top: 2%;
 }
 
+input[name="name"] {
+  margin-bottom: 2%;
+  margin-top: 2%;
+  font-size: 3rem;
+  border: 0;
+}
+
 div.profile-input-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -72,8 +79,14 @@ th.file-col {
   max-width: 30rem;
 }
 
-#invite-btn {
+#invite-btn, #quit-btn {
   text-align: center;
+  font-size: 1.3rem;
+}
+
+#quit-btn {
+  margin-top: 2rem;
+  width: 10%;
 }
 
 #invite-input, #invite-btn {
